add list elements and cat image

--- a/pet.html
+++ b/pet.html
@@ -6,8 +6,14 @@
     <body>
         <h1>Favourite Pet</h1>
         <p>The Cat is my number one favourite animal. Its called Mary</p>
-        <p></p>
-
-
+        <img src="images/cat.jpg" alt="cat">
+        <p>Things you should know about my cat:</p>
+        <ol>
+            <li>It spends most of its time sleeping.</li>
+            <li>It has 3 kittens</li>
+            <li>Its very playful.</li>
+            <li>It likes playing with:thread,ball, dangling items as toys</li>
+            <li>Favourite food is Fish</li>
+        </ol>
     </body>
 </html>
